--- a/index.html
+++ b/index.html
@@ -36,7 +36,43 @@
         </section>
     </header>
     <main>
-
+        <section class="features">
+            <div class="feature-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-contents">
+                <h2><span style="color:#727272">Quick list</span> of Our <span style="color:#FF900E">Features</span></h2>
+                <p>We serves many features. Here's our team. There are different section of our team. We plan something new to build something new, exciting. It is a bit ticky to compete us. Let's explore new features.</p>
+                <button class="btn-primary">Explore Now</button>
+            </div>
+        </section>
+        <section class="more-features">
+            <div class="features-div">
+                <h2>Features you will love & enjoy</h2>
+                <p>Any construction attending to but not an integral part of a design, such as, by way of example not limitation, landscape, building, or structural forms that enhance the site in general.</p>
+                <div class="feature">
+                    <h3>Desktop & Mobile Version</h3>
+                    <p>Computer architecture is the description of how computers are put together at a reasonably high level, or the study of how to design computers.......</p>
+                </div>
+                <div class="feature">
+                    <h3>Drag & Drop Builder</h3>
+                    <p>Architectural features means siding, wall facings, corner boards, brackets, columns, pilasters, windows, doors, window and door surrounds or architraves......</p>
+                </div>
+                <div class="feature">
+                    <h3>Awesome Modern Design</h3>
+                    <p>We make awesome designs to make our customers space bound. We think over a design hundred times to make the best services. We don't lag behind any......</p>
+                </div>
+                <div class="feature">
+                    <h3>Super Easy to Edit</h3>
+                    <p>Owr projects are made in an way that it can be edited easily. To make the development of our projects easily, we build it in such a way that it can be edited easily......</p>
+                </div>
+                
+            </div>
+            <div><img src="images/architect.png" alt=""></div>
+        </section>
     </main>
     <footer>
 
