--- a/index.html
+++ b/index.html
@@ -73,6 +73,59 @@
             </div>
             <div><img src="images/architect.png" alt=""></div>
         </section>
+
+        <!-- Experience Button -->
+        <div class="btn-experience">
+            <button class="btn-secondary">
+                <div><h1>10+Year</h1></div>
+                <div><p>Experience</p></div>
+            </button>
+        </div>
+
+        <!-- Facts Container -->
+        <div class="facts-container">
+            <div class="facts-titles">
+                <h3>Some Facts</h3>
+                <p>From the homes we live in to the offices we work in, architects have a hand in creating the spaces that make up our world. But what do we really know about them?</p>
+            </div>
+            <div class="facts">
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p>Project Finished</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/email.png" alt="">
+                    <h2>22578</h2>
+                    <p>Email Send</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Sponsors Section -->
+        <section class="sponsors">
+            <div class="sponsors-titles">
+                <h2>Our Sponsors</h2>
+                <p>Here are some names of our sponsors. They provide us sponsorship. these are well known companies in the world. Have a look at them.</p>
+            </div>
+            <div class="sponsors-div">
+                <div class="sponsor"><img src="images/sponsors/spotify.png" alt=""></div>
+                <div class="sponsor"><img src="images/sponsors/amazon.png" alt=""></div>
+                <div class="sponsor"><img src="images/sponsors/google.png" alt=""></div>
+                <div class="sponsor"><img src="images/sponsors/telerama.png" alt=""></div>
+                <div class="sponsor"><img src="images/sponsors/figma.png" alt=""></div>
+            </div>
+        </section>
     </main>
     <footer>
 
