New Section Added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <section class="more-features">
             <div class="features-div">
-                <h2>Features you will love & enjoy</h2>
+                <div style="border-left: 5px solid #FF900E;"><h2>Features you will love & enjoy</h2></div>
                 <p>Any construction attending to but not an integral part of a design, such as, by way of example not limitation, landscape, building, or structural forms that enhance the site in general.</p>
                 <div class="feature">
                     <h3>Desktop & Mobile Version</h3>
@@ -71,16 +71,34 @@
                 </div>
                 
             </div>
-            <div><img src="images/architect.png" alt=""></div>
+            <div class="feature-img-div">
+                <div>
+                    <img src="images/architect.png" alt="">
+                </div>
+            <!-- Experience Button -->
+            <div class="btn-experience">
+                <button class="btn-secondary">
+                    <h1>10+Year</h1>
+                    <p>Experience</p>
+                </button>
+            </div>
+            </div>
         </section>
 
-        <!-- Experience Button -->
-        <div class="btn-experience">
-            <button class="btn-secondary">
-                <div><h1>10+Year</h1></div>
-                <div><p>Experience</p></div>
-            </button>
-        </div>
+        <!-- About Us Section -->
+        <section class="about-us-container">
+            <div class="section-titles">
+                <h1>About Us</h1>
+                <p>Welcome to our company. Here you can find your dream destinations by sharing your choices with us. Feel free to visit our company.</p>
+                <p>Discover immerse virtual property tours.Explore properties from the comfort of your home.</p>
+                <button class="btn-primary">Read More</button>
+            </div>
+            <div class="about-us-images">
+                <img src="images/company1.jpg" alt="">
+                <img src="images/company2.jpg" alt="">
+            </div>
+        </section>
+
 
         <!-- Facts Container -->
         <div class="facts-container">
