--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>We plan to build your dream buildings. Our team is packed up with professionals who cares your comforts and wishes. We dream big to reach our efforts at a high level. We deploy many projects to bring a new change in our thinking and in societies.</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-            <div>
+            <div class="header-content-img">
                 <img src="images/banner.png" alt="">
             </div>
         </section>
@@ -85,21 +85,6 @@
             </div>
         </section>
 
-        <!-- About Us Section -->
-        <section class="about-us-container">
-            <div class="section-titles">
-                <h1>About Us</h1>
-                <p>Welcome to our company. Here you can find your dream destinations by sharing your choices with us. Feel free to visit our company.</p>
-                <p>Discover immerse virtual property tours.Explore properties from the comfort of your home.</p>
-                <button class="btn-primary">Read More</button>
-            </div>
-            <div class="about-us-images">
-                <img src="images/company1.jpg" alt="">
-                <img src="images/company2.jpg" alt="">
-            </div>
-        </section>
-
-
         <!-- Facts Container -->
         <div class="facts-container">
             <div class="facts-titles">
@@ -129,6 +114,21 @@
                 </div>
             </div>
         </div>
+
+        <!-- About Us Section -->
+        <section class="about-us-container">
+            <div class="section-titles">
+                <h1>About Us</h1>
+                <p>Welcome to our company. Here you can find your dream destinations by sharing your choices with us. Feel free to visit our company.</p>
+                <p>Discover immerse virtual property tours.Explore properties from the comfort of your home.</p>
+                <button class="btn-primary">Read More</button>
+            </div>
+            <div class="about-us-images">
+                <img src="images/company1.jpg" alt="">
+                <img src="images/company2.jpg" alt="">
+            </div>
+        </section>
+
 
         <!-- Sponsors Section -->
         <section class="sponsors">
